# BooksAPI

./: .example.env  .gitignore  README.md  app.py  create_tables.py  factory_app.py  main.py  pyproject.toml  settings.py
src/: __init__.py  app.py  authentication.py  controllers.py  services.py
src/adapters/: orm.py  repository.py
src/forms/: forms.py
src/models/: books.py  models.py  orm.py  reviews.py  users.py
src/repositories/: __init__.py  repository.py  unit_of_work.py
src/services/: __init__.py  authentication_service.py  book_service.py  external_api_service.py  logger.py
src/templates/: book_page.html  filter_book.html  forms.html  index.html  layout.html  sign_in.html
tests/integration/: conftest.py  test_check_endpoints.py
tests/unit/: mock_io_data.py  test_base_services.py  test_book_service.py  test_external_api_service.py
