[tool.poetry]
name = "BooksApp"
version = "0.1.0"
description = "Books app"
authors = ["Palu"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.7.4"
Flask = "^1.1"
Flask-Session = "^0.3"
psycopg2-binary = "^2.8"
SQLAlchemy = "^1.3"
Flask-SQLAlchemy = "^2.4.3"
Flask-WTF = "^0.14.2"
Flask-Bootstrap = "^3.3.7"
pandas = "^1.0.4"
requests = "^2.23.0"
Flask-Login = "^0.5.0"
Flask-HTTPAuth = "*"
dependency-injector = "^3.27"
python-dotenv = "^0.14"

[tool.poetry.dev-dependencies]
pytest = "^6.0"
pytest-cov = "^2.10"
mock = "^4.0"
flake8 = "^3.7"
black = "^19.10b0"
mypy = "^0.761"
flakehell = "^0.3.3"

[tool.black]
line-length = 90
target-version = ['py37']

[tool.flakehell]
# make output nice
format = "grouped"
# show line of source code in output
show_source = true
application-import-names = "app"

[tool.flakehell.plugins]
# include everything in pyflakes except E501
pyflakes = ["+*", "-E501"]
flake8-blind-except = ["+*"]
flake8-builtins = ["+*"]
flake8-logging-format = ["+*"]
mccabe = ["+*"]
pycodestyle = ["+*"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
